--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-boto3==1.21.42
-botocore==1.24.42
-jmespath==1.0.0
-pymongo==4.1.1
-PyMySQL==1.0.2
+boto3==1.16.63
+botocore==1.19.63
+jmespath==0.10.0
+logging==0.4.9.6
+pymongo==3.12.3
+PyMySQL==0.10.1
 python-dateutil==2.8.2
-s3transfer==0.5.2
+s3transfer==0.3.7
 six==1.16.0
 urllib3==1.26.9
