--- a/panorama_settings_example.yaml
+++ b/panorama_settings_example.yaml
@@ -6,7 +6,7 @@ aws_region: us-east-1
 mysql_username: root
 mysql_password: ''
 mysql_host: localhost
-mysql_database: 'edxapp'
+mysql_database: edxapp
 mongodb_host: localhost
 mongodb_username: ''
 mongodb_password: ''
@@ -19,27 +19,167 @@ base_partitions:
 tables:
   - name: auth_user
     datalake_table_name: auth_user_raw
+    fields:
+    - id
+    - password
+    - last_login
+    - is_superuser
+    - username
+    - first_name
+    - last_name
+    - email
+    - is_staff
+    - is_active
+    - date_joined
   - name: student_courseenrollment
     datalake_table_name: student_courseenrollment_raw
+    fields:
+    - id
+    - course_id
+    - created
+    - is_active
+    - mode
+    - user_id
   - name: auth_userprofile
     datalake_table_name: auth_userprofile_raw
+    fields:
+    - id
+    - name
+    - meta
+    - courseware
+    - language
+    - location
+    - year_of_birth
+    - gender
+    - level_of_education
+    - mailing_address
+    - city
+    - country
+    - goals
+    - allow_certificate
+    - bio
+    - profile_image_uploaded_at
+    - user_id
   - name: student_courseaccessrole
     datalake_table_name: student_courseaccessrole_raw
+    fields:
+    - id
+    - org
+    - course_id
+    - role
+    - user_id
   - name: course_overviews_courseoverview
     datalake_table_name: course_overviews_courseoverview_raw
+    fields:
+    - created
+    - modified
+    - version
+    - id
+    - _location
+    - display_name
+    - display_number_with_default
+    - display_org_with_default
+    - start
+    - end
+    - advertised_start
+    - course_image_url
+    - social_sharing_url
+    - end_of_course_survey_url
+    - certificates_display_behavior
+    - certificates_show_before_end
+    - cert_html_view_enabled
+    - has_any_active_web_certificate
+    - cert_name_short
+    - cert_name_long
+    - lowest_passing_grade
+    - days_early_for_beta
+    - mobile_available
+    - visible_to_staff_only
+    - _pre_requisite_courses_json
+    - enrollment_start
+    - enrollment_end
+    - enrollment_domain
+    - invitation_only
+    - max_student_enrollments_allowed
+    - announcement
+    - catalog_visibility
+    - course_video_url
+    - effort
+    - short_description
+    - org
+    - self_paced
+    - marketing_url
+    - eligible_for_financial_aid
+    - language
+    - certificate_available_date
   - name: courseware_studentmodule
     datalake_table_name: courseware_studentmodule_raw
+    fields:
+    - id
+    - module_type
+    - module_id
+    - course_id
+    - state
+    - grade
+    - max_grade
+    - done
+    - created
+    - modified
+    - student_id
     partitions:
+      interval: 2 hour
       partition_fields:
-        - course_id
-#        - student_id
-      interval: '2 hour'
+      - course_id
       timestamp_field: modified
   - name: grades_persistentcoursegrade
     datalake_table_name: grades_persistentcoursegrade_raw
+    fields:
+    - created
+    - modified
+    - id
+    - user_id
+    - course_id
+    - course_edited_timestamp
+    - course_version
+    - grading_policy_hash
+    - percent_grade
+    - letter_grade
+    - passed_timestamp
   - name: student_manualenrollmentaudit
     datalake_table_name: student_manualenrollmentaudit_raw
+    fields:
+    - id
+    - enrolled_email
+    - time_stamp
+    - state_transition
+    - reason
+    - enrolled_by_id
+    - enrollment_id
+    - role
   - name: student_courseenrollmentallowed
     datalake_table_name: student_courseenrollmentallowed_raw
+    fields:
+    - id
+    - email
+    - course_id
+    - auto_enroll
+    - created
+    - user_id
   - name: certificates_generatedcertificate
     datalake_table_name: certificates_generatedcertificate
+    fields:
+    - id
+    - course_id
+    - verify_uuid
+    - download_uuid
+    - download_url
+    - grade
+    - key
+    - distinction
+    - status
+    - mode
+    - name
+    - created_date
+    - modified_date
+    - error_reason
+    - user_id
