--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-boto3>=1.16.63
-botocore>=1.19.63
+boto3
+botocore
 jmespath>=0.10.0
-pymongo>=3.12.3
-PyMySQL>=0.10.1
+pymongo
+PyMySQL
 python-dateutil>=2.8.2
-PyYAML>=5.3.1
+PyYAML
 s3transfer>=0.3.7
 six>=1.16.0
 urllib3>=1.26.9
+click
