Add base_partitions to field list in table views

--- a/panorama_openedx_settings_example.yaml
+++ b/panorama_openedx_settings_example.yaml
@@ -8,7 +8,8 @@ datalake:
   datalake_database: panorama
   datalake_workgroup: panorama
   base_partitions:
-  - key: lms
+  - name: lms
+    type: varchar
     value: lms.example.com
 datasources:
 - type: openedx_course_structures
