--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 boto3
 botocore
-jmespath>=0.10.0
+jmespath
 pymongo
 PyMySQL
-python-dateutil>=2.8.2
+python-dateutil
 PyYAML
-s3transfer>=0.3.7
-six>=1.16.0
-urllib3>=1.26.9
+s3transfer
+six
+urllib3
 click
+pip
+wheel
+setuptools
+openpyxl
