--- a/panorama_openedx_settings_example.yaml
+++ b/panorama_openedx_settings_example.yaml
@@ -58,6 +58,16 @@ datasources:
   mysql_host:
   mysql_database: edxapp
   tables:
+  - name: site_configuration_siteconfiguration
+    fields:
+    - name: id
+      type: int
+    - name: site_id
+      type: int
+    - name: enabled
+      type: tinyint
+    - name: site_values
+      type: longtext
   - fields:
     - type: int
       name: id
