--- a/panorama_openedx_settings_example.yaml
+++ b/panorama_openedx_settings_example.yaml
@@ -19,6 +19,16 @@ datasources:
   mongodb_password: ''
   mongodb_database: edxapp
   tables:
+  - name: student_anonymoususerid
+    fields:
+    - name: id
+      type: int
+    - name: anonymous_user_id
+      type: varchar
+    - name: course_id
+      type: varchar
+    - name: user_id
+      type: int
   - name: course_structures
     fields:
     - name: module_location
