Use MySQL to get active versions in course_structures_datasource.py

--- a/panorama_openedx_settings_example.yaml
+++ b/panorama_openedx_settings_example.yaml
@@ -18,6 +18,10 @@ datasources:
   mongodb_username: ''
   mongodb_password: ''
   mongodb_database: edxapp
+  mysql_username:
+  mysql_password:
+  mysql_host:
+  mysql_database: edxapp
   tables:
   - name: course_structures
     fields:
