feat: Add problem weight to course structures

--- a/panorama_openedx_settings_example.yaml
+++ b/panorama_openedx_settings_example.yaml
@@ -55,6 +55,8 @@ datasources:
       type: varchar
     - name: component
       type: varchar
+    - name: weight
+      type: varchar
 - type: mysql
   name: openedx_mysql
   mysql_username:
