fix: Update requirements.txt with working versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-boto3
-botocore
-jmespath
-pymongo
-PyMySQL
-python-dateutil
-PyYAML
-s3transfer
-six
-urllib3
-click
-pip
-wheel
-setuptools
-openpyxl
+boto3==1.21.42
+botocore==1.24.42
+jmespath==1.0.0
+pymongo==4.1.1
+PyMySQL==1.0.2
+python-dateutil==2.8.2
+PyYAML==6.0
+s3transfer==0.5.2
+six==1.16.0
+urllib3==1.26.9
+click==8.1.2
+openpyxl==3.0.9
+cryptography==37.0.2
